# pyjudge

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  MANIFEST.in  README.md  TODO.md  docker_entrypoint.sh  pyproject.toml  requirements.txt  setup.py
docs/: deployment.md  docker-compose.yml  installing.md
examples/: .gitignore  README.md  USAGE.md  contest.json  instance.json  script.py  users.json
examples/minimal/: USAGE.md  contest.json  instance.json  users.json
examples/minimal/repository/: config.yaml
examples/minimal/repository/problems/helloworld/generators/: HelloWorldGenerator.java
examples/minimal/repository/problems/helloworld/input_validators/: helloworld.ctd
examples/minimal/repository/problems/pastryperfection/: problem.yaml
examples/minimal/repository/problems/pastryperfection/generators/: generator.py
examples/minimal/repository/problems/pastryperfection/input_validators/: pastryperfection.ctd
examples/minimal/repository/problems/pastryperfection/problem_statement/: problem.en.tex
examples/repository/: .gitignore
examples/repository/problems/helloworld/: problem.yaml
examples/repository/problems/helloworld/data/secret/: small1.ans  small1.seed
examples/repository/problems/helloworld/problem_statement/: problem.de.tex  problem.en.tex
examples/repository/problems/helloworld/solution/: solution.en.tex
examples/teal2026/: .gitignore  script.py
examples/teal2026/repository/problems/dfamin/: problem.yaml
examples/teal2026/repository/problems/helloworld/: problem.yaml
examples/teal2026/repository/problems/pastryperfection/: dpll_sample.py  problem.yaml
judge/: db.py
judge/action/: __init__.py  data.py  query.py  update.py
judge/data/: submission.py  teams.py
judge/database/: update.py  util.py
judge/model/: __init__.py  contest.py  language.py  problem.py  setup.py  submission.py  team.py  user.py
pydomjudge/: exc.py  util.py
pydomjudge/action/: __init__.py  data.py  query.py  update.py
pydomjudge/data/: submission.py  teams.py
pydomjudge/database/: _data.py  _update.py
pydomjudge/evaluate/: _statistics.py  render.py  statistics.py
pydomjudge/model/: __init__.py  _contest.py  _problem.py  _settings.py  _submission.py  _team.py  _user.py  _verdict.py  contest.py  language.py  problem.py  settings.py  submission.py  team.py  user.py  util.py
pydomjudge/repository/: kattis.py
pydomjudge/repository/checker/cpp/: run
pydomjudge/repository/compiler/haskell/: run
pydomjudge/repository/compiler/pascal/: run
pydomjudge/repository/compiler/python/: run
pydomjudge/repository/compiler/rust/: run
pydomjudge/scripts/: anonymize.py  check.py  db.py  default_instance.py  export.py  find_problem.py  generate_seed.py  get.py  make_admin.py  upload.py
pyjudge/: db.py  instance.py  util.py
pyjudge/action/: __init__.py  data.py  query.py  update.py
pyjudge/data/: submission.py  teams.py
pyjudge/evaluate/: render.py  statistics.py  util.py
pyjudge/model/: __init__.py  contest.py  language.py  problem.py  settings.py  setup.py  submission.py  team.py  user.py  util.py
pyjudge/repository/: kattis.py  languages.yml
pyjudge/repository/checker/cpp/: build
pyjudge/repository/checker/java/defaultImplementations/: CheckPermutation.java  CheckPrecision.java  CheckRational.java
pyjudge/repository/checker/java/framework/: AbstractChecker.java  CheckerInterface.java  CheckerLauncher.java
pyjudge/repository/checker/python/: run
pyjudge/repository/compare/default/: compare.py
pyjudge/repository/compiler/c/: run
pyjudge/repository/compiler/cpp/: run
pyjudge/repository/compiler/haskell/: run
pyjudge/repository/compiler/java/: DetectMain.java  build  run
pyjudge/repository/compiler/javascript/: run
pyjudge/repository/compiler/julia/: run
pyjudge/repository/compiler/rust/: run
pyjudge/repository/runscript/: run
pyjudge/repository/scripts/checker/java/: build  run
pyjudge/repository/scripts/compiler/java/: run
pyjudge/repository/scripts/compiler/python/: run
pyjudge/scripts/: check.py  db.py  export.py  find_problem.py  generate_seed.py  get.py  get_statements.py  make_admin.py  upload.py  util.py
src/pydomjudge/: exc.py  util.py
src/pydomjudge/database/: __init__.py  _db.py  _query.py  _update.py
src/pydomjudge/evaluate/: __init__.py  _render.py
src/pydomjudge/fuzzer/: __init__.py  _fuzzer.py
src/pydomjudge/model/: __init__.py  _contest.py  _language.py  _user.py  _util.py  _verdict.py
src/pydomjudge/repository/: kattis.py  languages.yml
src/pydomjudge/repository/checker/java/: run
src/pydomjudge/repository/compiler/c/: run
src/pydomjudge/repository/compiler/java/: DetectMain.java  run
src/pydomjudge/scripts/: anonymize.py  find_problem.py  get.py  make_admin.py  upload.py  util.py
src/pydomjudge/tools/fuzzer/: _server.py
src/pydomjudge/tools/fuzzer/static/: client.html  client.js
src/pydomjudge/tools/selfservice/: __init__.py  _selfservice.py  example_config.yaml
src/pydomjudge/tools/selfservice/templates/: register.html
tools/register/: domjudge_register.py  example_config.yaml  pyproject.toml
tools/register/templates/: base.html
tools/watcher/: .dockerignore  Dockerfile  domjudge_watcher.py  example_config.yaml  pyproject.toml
(+65 files in other folders)
