[project]
name = "PyDOMjudge"
version = "0.2"
description = "A library to ease interaction with DOMjudge"
authors = [ { name = "Tobias Meggendorfer", email = "tobias@meggendorfer.de" } ]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Programming Language :: Python :: 3"
]

dependencies = [
    "mysql-connector-python>=9.0",
    "PyYAML>=6.0",
    "Pillow>=9.0",
    "dateutils>=0.6",
    "problemtools",
    "pypdf>=5.3.0"
]

[project.scripts]
dt_judge_upload = "pydomjudge.scripts.upload:main"
dt_judge_export = "pydomjudge.scripts.export:main"
dt_kattis_find = "pydomjudge.scripts.find_problem:main"
dt_kattis_check = "pydomjudge.scripts.check:main"
dt_generate_seed = "pydomjudge.scripts.generate_seed:main"
dt_make_admin_user = "pydomjudge.scripts.make_admin:main"

[tool.setuptools.packages.find]
include = ["pydomjudge*"]

[tool.setuptools.package-data]
"pydomjudge.repository.runscript" = ["**"]
"pydomjudge.repository.compiler" = ["*/**"]
"pydomjudge.repository.checker" = ["*/**"]
"pydomjudge.repository" = ["languages.yml"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

