[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "PyDOMjudge"
version = "0.3.3"
description = "A library to ease interaction with DOMjudge"
authors = [ { name = "Tobias Meggendorfer", email = "tobias@meggendorfer.de" } ]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Programming Language :: Python :: 3"
]

requires-python = ">= 3.11"

dependencies = [
    "pymysql>=1.1",
    "PyYAML>=6.0",
    "Pillow>=9.0",
    "dateutils>=0.6",
    "problemtools",
    "pypdf>=5.3.0",
    "bcrypt>=4",
    "chardet>=5",
    "matplotlib",
    "pydantic",
    "tzlocal",
    "numpy",
    "flask>=3.1.3",
    "flask-inputs>=1.0.0",
    "jsonschema==4.*",
]

[tool.uv.sources]
problemtools = { path = "./libs/problemtools" }

[project.scripts]
dt_judge_upload = "pydomjudge.scripts.upload:main"
dt_judge_export = "pydomjudge.scripts.export:main"
dt_kattis_find = "pydomjudge.scripts.find_problem:main"
dt_kattis_check = "pydomjudge.scripts.check:main"
dt_kattis_get = "pydomjudge.scripts.get:main"
dt_generate_seed = "pydomjudge.scripts.generate_seed:main"
dt_make_admin_user = "pydomjudge.scripts.make_admin:main"
dt_default_settings = "pydomjudge.scripts.default_instance:main"
dt_fuzzer = "pydomjudge.fuzzer:run_app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"pydomjudge.fuzzer" = ["static/**/*", "templates/**/*"]
"pydomjudge.repository.runscript" = ["**"]
"pydomjudge.repository.compiler" = ["*/**"]
"pydomjudge.repository.checker" = ["*/**"]
"pydomjudge.repository" = ["languages.yml"]
"pydomjudge" = ["default_wordlist.gz"]