[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "domjudge_register"
version = "0.1.0"
description = "A small daemon to allow self-registration."
dependencies = [
    "Flask",
    "Flask-WTF",
    "PyYAML",
    "pymysql",
    "pydomjudge"
]

requires-python = ">= 3.11"

[project.scripts]
domjudge_register = "domjudge_register:start"

[tool.setuptools]
py-modules = ["domjudge_register"]